--- a/mid-project/src/index.css
+++ b/mid-project/src/index.css
@@ -1,3 +1,7 @@
+@import url('https://fonts.googleapis.com/css2?family=Krona+One&display=swap');
+* {
+  font-family: 'Krona One', sans-serif;
+}
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI",
