--- a/mid-project/src/pages/home/home.css
+++ b/mid-project/src/pages/home/home.css
@@ -1,3 +1,23 @@
+.header {
+  text-align: center;
+  height: 100vh;
+  background: url(./images/background-2.jpg) no-repeat center center fixed;
+  background-size: cover;
+  display: flex;
+}
+.wrapper-title {
+  margin-top: 500px;
+  width: 100%;
+  background-color: hsl(133, 13%, 42%, 0.7);
+  height: 200px;
+  display: flex;
+  align-items: center;
+}
+.title {
+  font-size: 60px;
+  opacity: 1;
+  color: #fff;
+}
 .hero {
   display: flex;
   flex-direction: column;
