--- a/mid-project/src/pages/registration/Registration.scss
+++ b/mid-project/src/pages/registration/Registration.scss
@@ -2,4 +2,9 @@
   height: 100vh;
   display: flex;
   align-items: center;
+  text-align: center;
+  height: 100vh;
+  background: url(./img/photo_2020-10-22_19-36-09.jpg) no-repeat center center fixed;
+  background-size: cover;
+  display: flex;
 }
