--- a/mid-project/src/pages/login/Login.scss
+++ b/mid-project/src/pages/login/Login.scss
@@ -1,20 +1,28 @@
-.auth-wrapper {
-    height: 100vh;
-    display: flex;
-    align-items: center;
-    text-align: center;
-    height: 100vh;
-    background: url(./img/photo_2020-10-22_19-36-09.jpg) no-repeat center center fixed;
-    background-size: cover;
-    display: flex;
-    
-  }
-  
-  .auth {
-    color: #bbb;
-    border: 1px solid #bbb;
-    &:hover {
-      color: black;
-      background-color: #bbb;
-    }
+body{
+	margin:0;
+	color:#6a6f8c;
+	background:#c8c8c8;
+	font:600 16px/18px 'Open Sans',sans-serif;
+}
+.login-wrap{
+	width:100%;
+	margin:auto;
+	max-width:525px;
+	min-height:670px;
+	position:relative;
+	background:url(./img/photo_2020-10-22_19-36-09.jpg) no-repeat center;
+	box-shadow:0 12px 15px 0 rgba(0,0,0,.24),0 17px 50px 0 rgba(0,0,0,.19);
+}
+.login-html{
+	width:100%;
+	height:100%;
+	position:absolute;
+	padding:90px 70px 50px 70px;
+	background:rgba(40,57,101,.9);
+}
+.group{
+
+}
+.input{
+
 }
