--- a/mid-project/src/ui/contacts/Contacts.scss
+++ b/mid-project/src/ui/contacts/Contacts.scss
@@ -37,25 +37,25 @@
     margin:10px 0;
     background: transparent;
     border: 0;
-    border-bottom: 2px solid #c5ecfd;
+    border-bottom: 2px solid #5d7963;
     padding: 10px;
-    color: #c5ecfd;
+    color: #5d7963;
     width: 100%;
 }
 .msg textarea{
     height: 212px;
 }
 ::-webkit-input-placeholder{
-    color: #c5ecfd;
+    color:#5d7963;
 }
 ::-moz-input-placeholder{
-color: #c5ecfd;
+color: #5d7963;
 }
 ::-ms-input-placeholder{
-    color: #c5ecfd;
+    color: #5d7963;
 }
 .btn{
-    background-color: #39b7dd;
+    background-color: #5d7963;
     text-align: center;
     padding: 15px;
     color:#fff;
