--- a/mid-project/src/ui/navbar/Navbar.module.css
+++ b/mid-project/src/ui/navbar/Navbar.module.css
@@ -69,3 +69,10 @@ a.auth:hover {
   color: black;
   background-color: #bbb;
 }
+a {
+  text-decoration: none;
+}
+
+.logo a {
+  color: #ffffff;
+}
