--- a/mid-project/src/pages/home/home.module.css
+++ b/mid-project/src/pages/home/home.module.css
@@ -1,3 +1,7 @@
+* {
+  margin: 0;
+  padding: 0;
+}
 .header {
   text-align: center;
   height: 100vh;
@@ -5,18 +9,22 @@
   background-size: cover;
   display: flex;
 }
-.wrapper-title {
+.wrapper_title {
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
   margin-top: 500px;
   width: 100%;
   background-color: hsl(133, 13%, 42%, 0.7);
   height: 200px;
-  display: flex;
-  align-items: center;
 }
 .title {
+  margin: 0;
   font-size: 60px;
   opacity: 1;
   color: #fff;
+  display: flex;
+  align-items: center;
 }
 .hero {
   display: flex;
@@ -44,4 +52,16 @@
     color: #fff;
     background-color: #282c34;
   }
+}
+
+.btn {
+  margin: 0;
+  width: 200px;
+  text-decoration: none;
+  font-size: 24px;
+  padding: 20px;
+  border: 1px solid #fff;
+  border-radius: 10px;
+  background-color: #fff;
+  color: #000;
 }
