--- a/mid-project/src/pages/Profile/Profile.scss
+++ b/mid-project/src/pages/Profile/Profile.scss
@@ -1,6 +1,17 @@
+
 .wrapper-profile {
-  padding-top: 100px;
+  height: 100vh;
+  //background: url(./images/photo_2020.jpg)
+  //no-repeat center center fixed;
+  //background-size: cover;
+  //display: flex;
 }
 .active-user {
-  color: red;
+  width: 48%;
+  margin: 10px 0;
+  background: transparent;
+  border: 0;
+  padding: 10px;
+  color: #5d7963;
+  width: 100%;
 }
