--- a/mid-project/src/pages/createHome/CreateHome.module.scss
+++ b/mid-project/src/pages/createHome/CreateHome.module.scss
@@ -76,6 +76,8 @@ body {
 }
 
 form {
+  font-family: 'Nunito', sans-serif;
+  color: #384047;
   max-width: 300px;
   margin: 250px auto 10px;
   padding: 10px 20px;
