--- a/mid-project/src/pages/main/Main.scss
+++ b/mid-project/src/pages/main/Main.scss
@@ -30,11 +30,12 @@
 }
 
 .content-wrapper {
-  margin-top: 30px;
+  margin-top: 0px;
   width: 100%;
   display: flex;
   justify-content: center;
-  margin-bottom: 40px;
+  margin-bottom: 0px;
+  background-color: #000000;
 }
 
 .content-block {
@@ -43,7 +44,7 @@
 
 .content-header {
   margin-bottom: 20px;
-  color: black;
+  color: rgb(255, 255, 255);
   text-align: center;
   font-size: 24px;
 }
@@ -87,23 +88,23 @@
 .description {
   padding-left: 20px;
   width: 430px;
-  color: black;
+  color: rgb(255, 255, 255);
 }
 
 .description-header {
-  color: black;
+  color: rgb(255, 255, 255);
   margin-bottom: 20px;
 }
 
 .description-designers {
-  color: black;
+  color: rgb(255, 255, 255);
   font-size: 12px;
   font-style: italic;
   margin-bottom: 15px;
 }
 
 .description-info {
-  color: black;
+  color: rgb(255, 255, 255);
   font-size: 16px;
   margin-bottom: 10px;
 }
@@ -112,15 +113,15 @@
   border-radius: 5%;
   padding: 20px;
   height: 300px;
-  background-color: #fff4ea;
+  background-color: #ffffff25;
 }
 
 .black {
-  color: black;
+  color: rgb(255, 255, 255);
   margin-bottom: 10px;
 }
 
 .orange {
-  color: #ff9833;
+  color: #ffffff;
   margin-bottom: 5px;
 }
