--- a/mid-project/src/pages/main/Main.scss
+++ b/mid-project/src/pages/main/Main.scss
@@ -1,127 +1,67 @@
-.nav-home {
-  width: 100%;
-  background-color: white;
-  height: 60px;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 0px 20px;
-}
-
-.nav-home-items {
-  display: flex;
-}
-
-.nav-home-item {
-  cursor: pointer;
-  margin-right: 20px;
-  color: #838792;
-  font-size: 16px;
-}
-
-.nav-home-item:hover {
-  text-decoration: underline;
-  text-decoration-color: aqua;
-}
-
-.home-img {
-  width: 100%;
-  height: 96vh;
-}
-
-.content-wrapper {
+.content {
   margin-top: 0px;
   width: 100%;
   display: flex;
   justify-content: center;
   margin-bottom: 0px;
   background-color: #000000;
+  &__block {
+    width: 1080px;
+  }
+  &__header {
+    color: rgb(255, 255, 255);
+    text-align: center;
+    font-size: 24px;
+  }
+  &__main {
+    display: flex;
+    justify-content: space-between;
+  }
+  &__photos {
+    width: 630px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+  }
+  &__photo {
+    display: flex;
+    justify-content: space-between;
+    padding: 5px;
+  }
+  &__photo > img {
+    border-radius: 5%;
+  }
 }
-
-.content-block {
-  width: 1080px;
-}
-
-.content-header {
-  margin-bottom: 20px;
-  color: rgb(255, 255, 255);
-  text-align: center;
-  font-size: 24px;
-}
-
 .big {
   font-size: 36px;
 }
-
-.content-main {
-  width: 100%;
-  height: 500px;
-  display: flex;
-  justify-content: space-between;
-}
-
-.photos {
-  width: 630px;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-}
-
-.photo {
-  display: flex;
-  justify-content: space-between;
-  padding: 5px;
-}
-
-.photo > img {
-  border-radius: 5%;
-}
-
-.photo:first-child {
-  height: 350px;
-}
-
-.photo:last-child {
-  height: 150px;
-}
-
 .description {
   padding-left: 20px;
   width: 430px;
   color: rgb(255, 255, 255);
-}
-
-.description-header {
-  color: rgb(255, 255, 255);
-  margin-bottom: 20px;
-}
-
-.description-designers {
-  color: rgb(255, 255, 255);
-  font-size: 12px;
-  font-style: italic;
-  margin-bottom: 15px;
-}
-
-.description-info {
-  color: rgb(255, 255, 255);
-  font-size: 16px;
-  margin-bottom: 10px;
-}
-
-.description-block {
-  border-radius: 5%;
-  padding: 20px;
-  height: 300px;
-  background-color: #ffffff25;
-}
-
-.black {
-  color: rgb(255, 255, 255);
-  margin-bottom: 10px;
-}
-
-.orange {
-  color: #ffffff;
-  margin-bottom: 5px;
+  &__header {
+    color: rgb(255, 255, 255);
+    margin-bottom: 20px;
+  }
+  &__designers {
+    color: rgb(255, 255, 255);
+    font-size: 12px;
+    font-style: italic;
+    margin-bottom: 15px;
+  }
+  &__info {
+    color: rgb(255, 255, 255);
+    font-size: 16px;
+    margin-bottom: 10px;
+  }
+  &__block {
+    border-radius: 5%;
+    padding: 20px;
+    height: 300px;
+    background-color: #ffffff25;
+  }
+  &__header-text{
+    color: rgb(255, 255, 255);
+    margin-bottom: 10px;
+  }
 }
