--- a/mid-project/src/pages/Profile/Profile.scss
+++ b/mid-project/src/pages/Profile/Profile.scss
@@ -1,38 +1,25 @@
-.wrapper-profile {
-  background: url(./images/photo_2020.jpg) center no-repeat;
-  background-size: cover;
-  padding-top: 100px;
-  .contact-form {
-    display: flex;
-    flex-direction: column;
-  }
-  h2 {
-    color: #5d7963;
-  }
-  .error {
-    color: red;
-  }
-  height: 100vh;
   //background: url(./images/photo_2020.jpg)
   //no-repeat center center fixed;
   //background-size: cover;
   //display: flex;
-}
-.active-user {
-  width: 48%;
-  margin: 10px 0;
-  background: transparent;
-  border: 0;
-  padding: 10px;
-  color: #5d7963;
-  width: 100%;
-}
 
-.btn-profile {
-  color: #5d7963;
-  border: 1px solid #5d7963;
-  &-edit {
-    color: #5d7963;
-    border: 1px solid #5d7963;
+  .wrapper-profile {
+    background: url(./images/photo_2020.jpg) center no-repeat;
+    background-size: cover;
+    padding-top: 100px;
+    &__contact-form {
+    display: flex;
+    flex-direction: column;
+    }
+    &__title {
+      color: #5d7963;
+    }
+    &__error {
+      color: red;
+    }
+    &__btn{
+      color: #5d7963;
+      border: 1px solid #5d7963;
+    }
+    height: 100vh;
   }
-}
