--- a/mid-project/src/features/rooms/components/rooms.scss
+++ b/mid-project/src/features/rooms/components/rooms.scss
@@ -6,6 +6,7 @@
   width: 350px;
   height: 500px;
   border: 1px solid #e8ebf7;
+  margin-bottom: 20px;
   box-shadow: 0px 2px 8px rgba(40, 41, 61, 0.08),
     0px 20px 32px rgba(96, 97, 112, 0.24);
   &__header {
@@ -47,4 +48,7 @@
   &__icon {
     font-size: 1.5rem;
   }
+}
+
+.comment {
 }
